syntax = "proto3";

package envoy.type;
import "google/protobuf/struct.proto";

import "extproto/ext.proto";
option (extproto.hash_all) = true;
option (extproto.merge_all) = true;
option (extproto.equal_all) = true;
option (extproto.clone_all) = true;

option go_package = "github.com/solo-io/protoc-gen-ext/tests/api";


// proto object to test all base objects
message Simple {
    string str = 1;
    bytes byt = 2 [(extproto.sensitive) = true];
    uint32 testUint32 = 3;
    uint64 testUint64 = 4;
    bool testBool = 5;
    double doubleTest = 6;
    float floatTest = 7;
    int32 int32Test = 8;
    int64 int64Test = 9;
    sint32 sint32Test = 10;
    sint64 sint64Test = 11;
    fixed32 fixed32Test = 12;
    fixed64 fixed64Test = 13;
    sfixed32 sfixed32Test = 14;
    sfixed64 sfixed64Test = 15;

    // skipped primitives
    string str_skipped = 16 [(extproto.skip_hashing) = true];
    uint32 int_skipped = 17 [(extproto.skip_hashing) = true];

    optional string strOptional = 18;
    optional uint32 testUint32Optional = 19;
    optional uint64 testUint64Optional = 20;
    optional bool testBoolOptional = 21;
    optional double doubleTestOptional = 22;
    optional float floatTestOptional = 23;
    optional int32 int32TestOptional = 24;
    optional int64 int64TestOptional = 25;
    optional sint32 sint32TestOptional = 26;
    optional sint64 sint64TestOptional = 27;
    optional fixed32 fixed32TestOptional = 28;
    optional fixed64 fixed64TestOptional = 29;
    optional sfixed32 sfixed32TestOptional = 30;
    optional sfixed64 sfixed64TestOptional = 31;

    // skipped primitives
    optional string str_skippedOptional = 32 [(extproto.skip_hashing) = true];
    optional uint32 int_skippedOptional = 33 [(extproto.skip_hashing) = true];
}

enum Test {
    HELLO = 0;
    WORLD = 1;
}

message Nested {
    Simple simple = 1;

    Simple other_simple = 2;

    Test test = 3;

    Empty empty = 4 [(extproto.sensitive) = true];

    repeated string hello = 5;

    google.protobuf.Struct details = 6;

    Simple skipper = 7 [(extproto.skip_hashing) = true];

    repeated Simple x = 8 [(extproto.sensitive) = true];

    map<string, Simple> initial = 9;

    map<string, string> simple_map = 10 [(extproto.sensitive) = true];

    oneof test_one_of {
        Empty empty_one_of = 11;
        NestedEmpty nested_one_of = 12;
        string primitive_one_of = 13;
        bytes bytes_one_of = 14;
    }

    repeated uint64 repeated_primitive = 15;

    repeated google.protobuf.Struct repeated_external = 16;

    map <string, google.protobuf.Struct> map_external = 17;
}


message Empty {
}

message NestedEmpty {
    Nested nested = 1;
}

message MultipleStrings {
    string s1 = 1;
    string s2 = 2;
}